Work for #2674 - Additional scrollbar is shown in small windows - fixed f-tests

--- a/packages/survey-creator-core/src/utils/layout.scss
+++ b/packages/survey-creator-core/src/utils/layout.scss
@@ -16,7 +16,7 @@
 }
 
 .svc-flex-row__element--growing {
-  flex-grow: 1;
+  flex: 1;
 }
 
 .svc-flex-column {
